tests/machine/x/rb/values_builtin.rb
m = {"a" => 1, "b" => 2, "c" => 3}
puts([values.call(m)].join(" "))
